<resources>
    <string name="app_name">Lebre</string>
    <string name="login_logo">Lebre</string>
    <string name="logIn">LOGIN</string>
    <string name="email_input">Email</string>
    <string name="senha_input">Senha</string>

    <string name="textViewConta">Conta</string>
    <string name="textViewInfoPessoal">Informações Pessoais</string>
    <string name="full_name">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="phone_number">Telefone</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>

    <string name="finalizar">Finalizar</string>
    <string name="senha_confirmar">Confirmar senha</string>
    <string name="senha_icon"></string>
    <string name="button_login">Login</string>
    <string name="senha_recover_input">Esqueceu sua senha?</string>
    <string name="nova_conta_button">Novo no Lebre? Crie uma conta aqui.</string>

    <string name="title_activity_dados_emergencia">Dados da Emergência</string>
    <string name="nVitimas">Nº de vítimas</string>
    <string name="emergencia">EMERGÊNCIA</string>
    <string name="informe_a_occorrencia">INFORME A OCORRÊNCIA</string>
    <string name="precisa_de_ajuda">Precisa de ajuda?</string>
    <string name="ocorrencias_cadastradas">Ocorrências Cadastradas</string>
    <string name="tipo">Tipo</string>
    <string name="enviar_localizacao">Enviar Localização</string>
    <string name="enviar_ocorrencia">ENVIAR OCORRÊNCIA</string>
    <string name="gmapslogo">GMapsLogo</string>

    <string-array name="tipos_ocorrencia">
        <item>Selecione</item>
        <item>Agressão Física</item>
        <item>Roubo</item>
        <item>Acidente Rodoviário</item>
        <item>Incêndio</item>
    </string-array>
</resources>
