<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout android:id="@+id/linearContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/Background"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".Login"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/login_logo"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:fontFamily="cursive"
            android:text="@string/login_logo"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="125sp"
            android:typeface="normal" />

            <TextView
                android:id="@+id/textViewConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/logIn"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="15dp"
                android:background="@color/GoldenHace" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/email_input"
                    android:textColor="@color/TextColor"
                    android:backgroundTint="@color/GoldenHace"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_signup_email"
                    android:drawablePadding="5dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/senha_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/TextInputLayoutAppearance"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/senha_input"
                    android:textColor="@color/TextColor"
                    android:backgroundTint="@color/GoldenHace"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_signup_password"
                    android:drawablePadding="5dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button_nobackground"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/button_login"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:typeface="normal"
                />

        <Button
            android:id="@+id/esquecerSenha"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/senha_recover_input"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:textStyle="" />

        <Button
            android:id="@+id/newUsuario_button"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="bottom|center"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="80dp"
            android:text="@string/nova_conta_button"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>