<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_personal_info">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2a3950"
        tools:context=".login">

        <EditText
            android:id="@+id/cidade_input"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:backgroundTint="@color/GoldenHace"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/cidade"
            android:inputType="textPassword"
            android:textColor="@color/HintText"
            android:textColorHint="@color/HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cidade_icon"
            app:layout_constraintTop_toBottomOf="@+id/estado_input" />

        <ImageView
            android:id="@+id/cidade_icon"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/senha_icon"
            app:layout_constraintEnd_toStartOf="@+id/cidade_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cidade_input"
            app:srcCompat="@drawable/ic_person_pin_24px" />

        <EditText
            android:id="@+id/estado_input"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:backgroundTint="@color/GoldenHace"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/estado"
            android:inputType="textPassword"
            android:textColor="@color/HintText"
            android:textColorHint="@color/HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/estado_icon"
            app:layout_constraintTop_toBottomOf="@+id/phone_input" />

        <ImageView
            android:id="@+id/estado_icon"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/senha_icon"
            app:layout_constraintEnd_toStartOf="@+id/phone_input"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/estado_input"
            app:srcCompat="@drawable/ic_place_24px" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:background="@color/GoldenHace"
            app:layout_constraintBottom_toBottomOf="@+id/signup_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/signup_text"
            app:layout_constraintTop_toTopOf="@+id/signup_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:background="@color/GoldenHace"
            android:backgroundTint="@color/GoldenHace"
            app:layout_constraintBottom_toBottomOf="@+id/signup_text"
            app:layout_constraintEnd_toStartOf="@+id/signup_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signup_text" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nome_completo_input"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:backgroundTint="@color/GoldenHace"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/full_name"
            android:inputType="none|textPersonName"
            android:singleLine="true"
            android:textColor="@color/HintText"
            android:textColorHint="@color/HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/person_icon"
            app:layout_constraintTop_toBottomOf="@+id/profilepic" />

        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/email_icon"
            app:layout_constraintEnd_toStartOf="@+id/nome_completo_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nome_completo_input"
            app:srcCompat="@drawable/ic_person_24px" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:backgroundTint="@color/GoldenHace"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/HintText"
            android:textColorHint="@color/HintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phone_icon"
            app:layout_constraintTop_toBottomOf="@+id/nome_completo_input" />

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/senha_icon"
            app:layout_constraintEnd_toStartOf="@+id/phone_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phone_input"
            app:srcCompat="@drawable/ic_phone_android_24px" />

        <Button
            android:id="@+id/finalizar_button"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/finalizar"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cidade_input" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="61dp"
            android:layout_height="49dp"
            app:layout_constraintBottom_toBottomOf="@+id/profilepic"
            app:layout_constraintEnd_toEndOf="@+id/profilepic"
            app:layout_constraintStart_toStartOf="@+id/profilepic"
            app:layout_constraintTop_toTopOf="@+id/profilepic"
            app:srcCompat="@drawable/ic_add_a_photo_24px" />

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_text"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@tools:sample/avatars" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>